<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aims_pumpkin</name>
  <version>0.0.0</version>
  <description>Motion planning server for pumpkin carving</description>
  <maintainer email="smith.15485@osu.edu">Samantha Smith</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pumpkin_msgs</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_state_solver</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_task_composer</depend>
  <depend>tesseract_rosutils</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>motoros2_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
