<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pumpkin_bt_application</name>
  <version>0.0.0</version>
  <description>TODO Update description
  </description>

  <maintainer email="smith.15485@osu.edu">Samantha Smith (AIMS Lab @ The Ohio State University)</maintainer>
  <license>Proprietary</license>
  <author email="smith.15485@buckeyemail.osu.edu">Samantha Smith (AIMS @ tOSU)</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>rclcpp</depend>
  <depend>bt_common_nodes</depend>
  <depend>motoros2_interfaces</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
